fix(github): Update *-release.yml
Align workflow names.

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -4,10 +4,10 @@
 # Copyright © 2024 Dagitali LLC. All rights reserved.
 #
 # A GitHub Actions workflow file that automates part of the GitFlow workflow.
-# Specificially, it:
+# Specifically, it:
 #
 # 1. Creates a GitHub pull request (PR) for the `release` branch.
-# 2. "Freezes" (more or less) the `develop` branch for releases, althought
+# 2. "Freezes" (more or less) the `develop` branch for releases, although
 #    other PRs can be merged to develop during the release branch lifetime
 #    without affecting it.
 #
