--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -8,9 +8,14 @@
 # GitFlow itself is also an opinionated feature-based Git branching model with:
 #
 # See:
-# 1. https://github.com/actions
-# 2. https://github.com/features/actions
-# 3. https://docs.github.com/en/actions
+# 1. https://github.com/FlineDev/HandySwift/blob/main/.github/workflows/
+#    main.yml
+# 2. https://github.com/FlineDev/HandySwiftUI/blob/main/.github/workflows/
+#    main.yml
+# 3. https://github.com/actions
+# 4. https://github.com/features/actions
+# 5. https://github.com/mattmassicotte/nsui/blob/main/.github/workflows/ci.yml
+# 6. https://docs.github.com/en/actions
 
 ---
 
@@ -34,7 +39,16 @@ name: Test
 jobs:
   test-macos:
     runs-on: macos-15
+    strategy:
+      matrix:
+        destination:
+          - "platform=macOS"
+          - "platform=macOS,variant=Mac Catalyst"
+          - "platform=iOS Simulator,name=iPhone 17 Pro"
+          - "platform=tvOS Simulator,name=Apple TV"
+          - "platform=visionOS Simulator,name=Apple Vision Pro"
+          - "platform=watchOS Simulator,name=Apple Watch Series 7 - 45mm"
     steps:
       - uses: actions/checkout@v4
       - name: Run tests
-        run: swift test
+        run: swift test -destination "${{ matrix.destination }}"
