--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -20,6 +20,7 @@
 ---
 
 on:
+  workflow_dispatch:  # Allow manual triggering.
   pull_request:
     branches:
       - bugfix/**
@@ -28,7 +29,7 @@ on:
       - opened
       - closed
       - labeled
-  push:
+  push:               # Allow automatic triggering.
     branches:
       - develop
       - main
