--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -52,4 +52,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run tests
-        run: swift test -destination "${{ matrix.destination }}"
+        run: swift test --destination "${{ matrix.destination }}"
