--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -44,11 +44,11 @@ jobs:
       matrix:
         destination:
           - "platform=macOS"
-          - "platform=macOS,variant=Mac Catalyst"
-          - "platform=iOS Simulator,name=iPhone 17 Pro"
-          - "platform=tvOS Simulator,name=Apple TV"
-          - "platform=visionOS Simulator,name=Apple Vision Pro"
-          - "platform=watchOS Simulator,name=Apple Watch Series 7 - 45mm"
+          # - "platform=macOS,variant=Mac Catalyst"
+          - "platform=iOS Simulator,name=iPhone 14 Pro,OS=17.0"
+          - "platform=tvOS Simulator,name=Apple TV 4K (3rd generation),OS=17.0"
+          - "platform=visionOS Simulator,name=Vision Pro,OS=1.0"
+          - "platform=watchOS Simulator,name=Apple Watch Ultra 2,OS=10.0"
     steps:
       - uses: actions/checkout@v4
       - name: Run tests
