--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,9 @@
-# pre-commit-swift-package.yml
+# lint.yml
 # SwiftUIHelpers
 #
 # Copyright © 2025 Dagitali LLC. All rights reserved.
 #
-# A GitHub Actions workflow file that automates quality assuring a Swift
-# package using the Pre-Commit CLI.
+# A GitHub Actions workflow file that automates linting software projects.
 #
 # See:
 # 1. https://github.com/actions
@@ -13,13 +12,13 @@
 
 ---
 
-name: Pre-commit Swift package
+name: Lint
 
 on:
   pull_request:       # Allow automatic triggering for PRs.
     branches:
-      - bugfix/**
-      - feature/**
+      - 'bugfix/**'
+      - 'feature/**'
     types:
       - opened
       - closed
@@ -27,7 +26,7 @@ on:
   workflow_dispatch:  # Allow manual triggering.
 
 jobs:
-  pre-commit:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
