refactor(github): Rename test-release.yml
...to test.yml.
Standardize file header comment.
Standardize workflow.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-# test-release.yml
+# test.yml
 # SwiftUIHelpers
 #
 # Copyright © 2025 Dagitali LLC. All rights reserved.
 #
-# A GitHub Actions workflow file that automates testing a Swift package.
+# A GitHub Actions workflow file that automates testing software projects.
 #
 # See:
 # 1. https://github.com/FlineDev/HandySwift/blob/main/.github/workflows/
@@ -16,25 +16,26 @@
 # 6. https://github.com/maxim-lobanov/setup-xcode
 # 7. https://github.com/maxim-lobanov/setup-xcode/issues/90
 # 8. https://docs.github.com/en/actions
+# 9. https://docs.github.com/en/actions/use-cases-and-examples/
+#    building-and-testing/building-and-testing-swift
 
 ---
 
-name: Test Swift package to be released
+name: Test
 
 on:
-  pull_request:
+  pull_request:       # Allow automatic triggering for PRs.
     branches:
-      - bugfix/**
-      - feature/**
+      - 'bugfix/**'
+      - 'feature/**'
     types:
       - opened
       - closed
       - labeled
-  push:               # Allow automatic triggering.
+  push:               # Allow automatic triggering for pushes.
     branches:
       - develop
       - main
-      - versions
   workflow_dispatch:  # Allow manual triggering.
 
 jobs:
