refactor(github): Rename generate-swift-package-api-docs.yml
...to document.yml.
Standardize file header comment.
Standardize workflow.

--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -1,10 +1,9 @@
-# generate-swift-package-api-docs.yml
+# document.yml
 # SwiftUIHelpers
 #
 # Copyright © 2025 Dagitali LLC. All rights reserved.
 #
-# A GitHub Actions workflow file that automates generating API documentation for
-# the Swift package.
+# A GitHub Actions workflow file that automates documenting software projects.
 #
 # See:
 # 1. https://danielsaidi.com/blog/2024/03/10/automatically-publish-docc-to-
@@ -22,7 +21,7 @@
 
 ---
 
-name: Generate Swift package API docs
+name: Document
 
 on:
   push:               # Allow automatic triggering for pushes.
@@ -54,7 +53,7 @@ env:
 
 # Build and deploy the DocC documentation.
 jobs:
-  deploy:
+  document:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
