--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-# create-github-release.yml
+# publish.yml
 # SwiftUIHelpers
 #
 # Copyright © 2025 Dagitali LLC. All rights reserved.
@@ -14,15 +14,15 @@
 
 ---
 
-name: Create GitHub release
+name: Publish
 
 on:
   push:
     tags:
-      - "v*.*.*"
+      - v*.*.*
 
 jobs:
-  release:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
