ci(github): Update document.yml
Show available destinations for package's scheme.

--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -81,6 +81,9 @@ jobs:
           swift package resolve
           xcodebuild docbuild \
             -scheme $SCHEME \
+            -showdestinations
+          xcodebuild docbuild \
+            -scheme $SCHEME \
             -derivedDataPath $BUILD_PATH \
             -destination 'generic/platform=iOS'
       - name: Convert DocC archive to static website
